--- a/auto_backup/i18n/ko_KR.po
+++ b/auto_backup/i18n/ko_KR.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Odoo Server 11.0-20180205\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-02-08 03:22+0000\n"
-"PO-Revision-Date: 2018-02-08 12:47+0900\n"
+"PO-Revision-Date: 2018-02-08 16:12+0900\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -46,7 +46,7 @@ msgstr "백업실패시에 이메일로 알려주기 (자동)"
 #. module: auto_backup
 #: model:ir.model.fields,field_description:auto_backup.field_db_backup_autoremove
 msgid "Auto. Remove Backups"
-msgstr "백업제거하기 (자동)"
+msgstr "정기적으로 오래된 백업은 자동제거하기"
 
 #. module: auto_backup
 #: model:ir.ui.view,arch_db:auto_backup.view_backup_config_form
@@ -125,7 +125,7 @@ msgstr ""
 #. module: auto_backup
 #: model:ir.ui.view,arch_db:auto_backup.view_backup_config_form
 msgid "Contact me!"
-msgstr "저에게 연락하세요~"
+msgstr "직접 개발하고 있으니 저에게 연락하세요~"
 
 #. module: auto_backup
 #: model:ir.model.fields,field_description:auto_backup.field_db_backup_create_uid
@@ -286,12 +286,12 @@ msgstr "포트"
 #. module: auto_backup
 #: model:ir.model.fields,field_description:auto_backup.field_db_backup_days_to_keep_sftp
 msgid "Remove SFTP after x days"
-msgstr "몇일후에 SFTP 제거"
+msgstr "SFTP에 저장된 백업본을 몇일지나면 제거할까요?"
 
 #. module: auto_backup
 #: model:ir.model.fields,field_description:auto_backup.field_db_backup_days_to_keep
 msgid "Remove after x days"
-msgstr "몇일후에 제거하기"
+msgstr "몇일지난 백업본은 제거할까요"
 
 #. module: auto_backup
 #: model:ir.ui.view,arch_db:auto_backup.view_backup_config_form
